# soap-supply-price-bots

./: .gitignore  test_organiccocoabutterwafers.py
airtable/: aarontable1.js
cs191/price-graphs/: amazon.csv  cs_191_bot_scrape.xlsx  ecommerce_results.csv  main.py  pyproject.toml
cs191/price-graphs/tests/: test_price_graphs.py
dispatch/: Caddyfile  Pipfile  README.md  main.py  requirements.txt
selbots/: README.rst  main.py  pyproject.toml
selbots/picking/: __init__.py  picking.py
selbots/selbots/: __init__.py
selbots/selbots/common/: common.py
selbots/selbots/picking/: picking.py
selbots/selbots/sites/: __init__.py  brambleberry.py  bulk_apothecary.py  bulk_natural_oils.py  chemistry_store.py  essential_depot.py  mountain_rose_herbs.py  nurture_soap.py  rustic_escentuals.py  scent_sational_supply.py  wholesale_supplies_plus.py
selbots/sites/: scent_sational_supply.py
selbots/tests/: helper.py  test_nurture_soap.py  test_selbots.py
selbots/tests/common/: test_common.py
selbots/tests/picking/: test_picking.py
selbots/tests/sites/: test_brambleberry.py  test_bulk_apothecary.py  test_bulk_natural_oils.py  test_chemistry_store.py  test_essential_depot.py  test_mountain_rose_herbs.py  test_nurture_soap.py  test_rustic_escentuals.py  test_scent_sational_supply.py  test_wholesale_supplies_plus.py
selenium_scripts/: Pipfile  README.md  bot.py  main.py  (+17 more)
sheetsman/: main.py  pyproject.toml  searchdemo.py
sheetsman/config/: elasticsearch_example.json
sheetsman/sheetsman/: __init__.py  elasticsearch.py  fetch.py
sheetsman/tests/: test_sheetsman.py
(+15 files in other folders)
