[tool.poetry]
name = "selbots"
version = "0.1.0"
description = "Selenium bots"
authors = ["Russell Tran <tranrl@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
Pint = "^0.18"
quantulum3 = "^0.7.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
