[tool.poetry]
name = "sheetsman"
version = "0.1.0"
description = ""
authors = ["Russell Tran <tranrl@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.1.1"
selbots = {path = "../selbots", develop = true}
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
