[tool.poetry]
name = "price-graphs"
version = "0.1.0"
description = ""
authors = ["Russell Tran <tranrl@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
